--- a/sass/components/_order-summary.scss
+++ b/sass/components/_order-summary.scss
@@ -89,7 +89,7 @@
   &__buttons {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 3.5rem;
     align-items: center;
   }
 }
